[tool.poetry]
name = "nospace"
version = "0.1.1-alpha.0"
description = "recursively rename files and folders to remove spaces and format with optional flags"
authors = ["yenaras <brandon82890@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/yenaras/nospace"
keywords = ["cli", "spaces", "format"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nospace = "nospace.nospace:main"
